<resources>
    <string name="app_name">Slytherin3</string>
    <string name="adicionarTarefa">+ Tarefa</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="estado">Estado</string>
    <string name="dificuldade">Dificuldade</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="tarefaExcluida">Tarefa excluída</string>
    <string name="tarefaCadastrada">Tarefa cadastrada!</string>
    <string name="tarefaAtualizada">Tarefa atualizada!</string>
    <string name="adicionarEtiqueta">+ Etiqueta</string>
    <string name="voltar">Voltar</string>
    <string name="erroDescricao">Ta tentando salvar o que mesmo?</string>
    <string name="cadastroRealizado">Cadastro realizado!</string>
    <string name="ops">OPS!</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="tarefas">Tarefas</string>
</resources>
